Add Dockerfile, update configuration for PostgreSQL, and implement CORS support